# apex_openmp_policy

./: .gitignore  CMakeLists.txt  README.md
src/: CMakeLists.txt  apex_openmp_policy.cpp  policy_test.cpp
